# warraq

./: .env.example  .gitignore  DESIGN.md  pyproject.toml
data/eval/: kitab_loader.py
evals/: arabic_normalize.py  harness.py  metrics.py
evals/baselines/: base.py  gemini.py  gpt4o.py
tests/: test_metrics.py
