[project]
name = "warraq"
version = "0.1.0"
description = "Arabic document intelligence — eval harness and model training"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[dependency-groups]
dev = [
    "jiwer>=3.0",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
